--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -10,7 +10,7 @@
 	Comments for DefensiveSec	</title>
 	<atom:link href="https://www.defensivesec.net/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.defensivesec.net/</link>
-	<description>Just another WordPress site</description>
+	<description>A website for sharing defensive security knowledge.</description>
 	<lastBuildDate>2019-07-18 02:01:09</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
