--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>
 	Comments for DefensiveSec	</title>
-	<atom:link href="https://www.defensivesec.net/comments/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="http://www.defensivesec.net/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.defensivesec.net/</link>
 	<description>A website for sharing defensive security knowledge.</description>
 	<lastBuildDate>2019-07-18 02:01:09</lastBuildDate>
