--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for DefensiveSec	</title>
-	<atom:link href="http://www.defensivesec.net/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.defensivesec.net/</link>
+	<atom:link href="https://defensivesec.net/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://defensivesec.net/</link>
 	<description>A website for sharing defensive security knowledge.</description>
 	<lastBuildDate>2019-07-19 01:55:52</lastBuildDate>
 	<sy:updatePeriod>
